Fix font size and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,12 +7,18 @@ html, body {
 
 body {
   font-family: 'Times New Roman', Times, serif;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 300;
   line-height: 1.2;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media screen and (min-width: 1024px) {
+  body {
+    font-size: 22px;
+  }
 }
 
 * {
@@ -27,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h4 {
-  margin: 0 0 1rem;
+  margin: 0;
   font-size: 2rem;
   color: rgb(0,28,100);
 }
